# betmimi

./: .dockerignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
src/: alembic.ini
src/app/: updateme.py
src/app/api/: __init__.py  dependencies.py
src/app/core/: address_verification.py  config.py  constants.py  logger.py  schemas.py  security.py  setup.py
src/app/crud/: crud_balances.py  crud_matches.py  crud_opponent.py  crud_predictions.py  crud_rate_limit.py  crud_users.py
src/app/models/: __init__.py  balances.py  games.py  match.py  predictions.py  rate_limit.py  user.py
src/app/schemas/: custom.py  games.py  job.py  opponents.py  predictions.py  users.py
src/migrations/: env.py
src/migrations/versions/: 097599cf2f10_auto_migration.py  0c95e095959a_added_args.py  0cb466324503_auto_migration.py  0ffe98e97e04_auto_migration.py  143c96dcc705_auto_migration.py  14a363f9f7d8_auto_migration.py  14f08210b132_auto_migration.py  183ed5dab22a_auto_migration.py  1a98c7be1e10_auto_migration.py  1a998120e50c_auto_migration.py  1cb0150dabdb_auto_migration.py  1ee35911598d_auto_migration.py  245251c192c9_auto_migration.py  270c8620479f_auto_migration.py  29fb17912889_auto_migration.py  2da8d75107e0_auto_migration.py  315f37d35368_auto_migration.py  31eba404c55c_auto_migration.py  350cb52eb29f_auto_migration.py  376cf1971da9_auto_migration.py  37d97fcc89cd_auto_migration.py  3d15fa4ea8f5_auto_migration.py  3d92f8e3f197_auto_migration.py  (+53 more)
src/scripts/: create_first_superuser.py
(+50 files in other folders)
