[tool.poetry]
name = "fast_demo"
version = "0.1.0"
description = "Async demo app using fastapi, sqlmodel, redis and postgres"
authors = ["moses966 <mosikoproducts@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
gunicorn = "^23.0.0"
redis = "^5.1.1"
arq = "^0.26.1"
sqlmodel = "^0.0.22"
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.35"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.9"
web3 = "^7.3.0"
pydantic-settings = "^2.5.2"
bcrypt = "^4.2.0"
fastcrud = "^0.15.1"
python-jose = "^3.3.0"
aioredis = "^2.0.1"
httpx = "^0.27.2"
sendgrid = "^6.11.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
